--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,11 @@ jobs:
     - name: Lintfix
       run: |
         make lintfix
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "golangci-lint autofix" || echo "No changes to commit"
+        git push || echo "No changes to push"
         
     - name: Test
       run: |
