--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,11 @@
 name: Go
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - NxPKG-patch-1
+  pull_request:
+    branches:
+      - NxPKG-patch-1
 jobs:
   test:
     name: Test
@@ -14,11 +20,20 @@ jobs:
       with:
         go-version-file: go.mod
 
-    - name: Lint
-      uses: golangci/golangci-lint-action@v6.0.1
-      with:
-        version: v1.54
-        args : --verbose
+    # - name: Lint
+    #   uses: golangci/golangci-lint-action@v6.0.1
+    #   with:
+    #     version: v1.54
+    #     args : --verbose
+
+    - name: Lintfix
+      run: |
+        make lintfix
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "golangci-lint autofix" || echo "No changes to commit"
+        git push || echo "No changes to push"
 
     - name: Test
       run: |
