--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,11 +1,5 @@
 name: Go
-on:
-  push:
-    branches:
-      - azurelinux
-  pull_request:
-    branches:
-      - azurelinux
+on: [push, pull_request]
 jobs:
   test:
     name: Test
