--- a/.github/workflows/redhat.yml
+++ b/.github/workflows/redhat.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v5
 
     - name: Set up Go
-      uses: actions/setup-go@v6
+      uses: actions/setup-go@v5
       with:
         go-version-file: go.mod
 
@@ -46,3 +46,12 @@ jobs:
     - if: always()
       name: Red Hat CSAF VEX
       run: ./scripts/update.sh redhat-csaf-vex "Red Hat CSAF VEX"
+
+    - name: Microsoft Teams Notification
+      uses: Skitionek/notify-microsoft-teams@e7a2493ac87dad8aa7a62f079f295e54ff511d88
+      if: failure()
+      with:
+        webhook_url: ${{ secrets.TRIVY_MSTEAMS_WEBHOOK }}
+        needs: ${{ toJson(needs) }}
+        job: ${{ toJson(job) }}
+        steps: ${{ toJson(steps) }}
