--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -123,11 +123,11 @@ jobs:
         name: Root CVE Tracker
         run: ./scripts/update.sh rootio "Root CVE Feed Tracker"
 
-      - name: Microsoft Teams Notification
-        uses: Skitionek/notify-microsoft-teams@e7a2493ac87dad8aa7a62f079f295e54ff511d88
-        if: failure()
-        with:
-          webhook_url: ${{ secrets.TRIVY_MSTEAMS_WEBHOOK }}
-          needs: ${{ toJson(needs) }}
-          job: ${{ toJson(job) }}
-          steps: ${{ toJson(steps) }}
+     # - name: Microsoft Teams Notification
+     #   uses: Skitionek/notify-microsoft-teams@e7a2493ac87dad8aa7a62f079f295e54ff511d88
+     #   if: failure()
+     #   with:
+     #     webhook_url: ${{ secrets.TRIVY_MSTEAMS_WEBHOOK }}
+     #     needs: ${{ toJson(needs) }}
+     #     job: ${{ toJson(job) }}
+     #     steps: ${{ toJson(steps) }}
