--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,5 @@
 name: Update vuln-list repo
+
 on:
   schedule:
     - cron: "0 */6 * * *"
@@ -11,123 +12,91 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.ORG_REPO_TOKEN }}
       VULN_LIST_DIR: "vuln-list"
+
     steps:
-      - name: Check out code
+      - name: Checkout main repo
         uses: actions/checkout@v5
 
-      - name: Set up Go
+      - name: Set up Go with cache
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
+          cache: true
 
-      - name: Check out vuln-list repo
+      - name: Checkout vuln-list repo
         uses: actions/checkout@v5
         with:
           repository: ${{ github.repository_owner }}/vuln-list
           token: ${{ secrets.ORG_REPO_TOKEN }}
           path: ${{ env.VULN_LIST_DIR }}
 
-      - name: Setup github user email and name
+      - name: Configure GitHub user
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
 
-      - name: Compile vuln-list-update
+      - name: Build vuln-list-update
         run: go build -o vuln-list-update .
 
-      - if: always()
-        name: Alpine Issue Tracker
-        run: ./scripts/update.sh alpine "Alpine Issue Tracker"
+      # Consolidate all update scripts into a matrix for maintainability
+      - name: Run vulnerability source updaters
+        run: ./scripts/update.sh ${{ matrix.target }} "${{ matrix.description }}"
+        if: always()
+        strategy:
+          fail-fast: false
+          matrix:
+            include:
+              - target: alpine
+                description: "Alpine Issue Tracker"
+              - target: alpine-unfixed
+                description: "Alpine Secshfixes Tracker"
+              - target: ubuntu
+                description: "Ubuntu CVE Tracker"
+              - target: amazon
+                description: "Amazon Linux Security Center"
+              - target: oracle-oval
+                description: "Oracle Linux OVAL"
+              - target: photon
+                description: "Photon Security Advisories"
+              - target: ghsa
+                description: "GitHub Security Advisory"
+              - target: cwe
+                description: "CWE"
+              - target: suse-cvrf
+                description: "SUSE CVRF"
+              - target: glad
+                description: "GitLab Advisory Database"
+              - target: alma
+                description: "AlmaLinux Security Advisory"
+              - target: rocky
+                description: "Rocky Linux Security Advisory"
+              - target: azure
+                description: "Azure Linux and CBL-Mariner Vulnerability Data"
+              - target: osv
+                description: "OSV Database"
+              - target: wolfi
+                description: "Wolfi Security Data"
+              - target: chainguard
+                description: "Chainguard Security Data"
+              - target: openeuler
+                description: "openEuler CVE Data"
+              - target: echo
+                description: "Echo CVE Data"
+              - target: minimos
+                description: "MinimOS Security Data"
+              - target: seal
+                description: "Seal Security Data"
+              - target: eoldates
+                description: "EOL dates"
+              - target: rootio
+                description: "Root CVE Feed Tracker"
 
-      - if: always()
-        name: Alpine Unfixed Vulnerability Tracker
-        run: ./scripts/update.sh alpine-unfixed "Alpine Secshfixes Tracker"
-
-      - if: always()
-        name: Ubuntu CVE Tracker
-        run: ./scripts/update.sh ubuntu "Ubuntu CVE Tracker"
-
-      - if: always()
-        name: Amazon Linux AMI Security Advisory
-        run: ./scripts/update.sh amazon "Amazon Linux Security Center"
-
-      - if: always()
-        name: Oracle Linux OVAL
-        run: ./scripts/update.sh oracle-oval "Oracle Linux OVAL"
-
-      - if: always()
-        name: Photon CVE Advisory
-        run: ./scripts/update.sh photon "Photon Security Advisories"
-
-      - if: always()
-        name: GitHub Security Advisory
-        run: ./scripts/update.sh ghsa "GitHub Security Advisory"
-
-      - if: always()
-        name: CWE
-        run: ./scripts/update.sh cwe "CWE"
-
-      - if: always()
-        name: SUSE CVRF
-        run: ./scripts/update.sh suse-cvrf "SUSE CVRF"
-
-      - if: always()
-        name: GitLab Advisory Database
-        run: ./scripts/update.sh glad "GitLab Advisory Database"
-
-      - if: always()
-        name: AlmaLinux Security Advisory
-        run: ./scripts/update.sh alma "AlmaLinux Security Advisory"
-
-      - if: always()
-        name: Rocky Linux Security Advisory
-        run: ./scripts/update.sh rocky "Rocky Linux Security Advisory"
-
-      - if: always()
-        name: Azure Linux and CBL-Mariner Vulnerability Data
-        run: ./scripts/update.sh azure "Azure Linux and CBL-Mariner Vulnerability Data"
-
-      - if: always()
-        name: OSV Database
-        run: ./scripts/update.sh osv "OSV Database"
-
-      - if: always()
-        name: Wolfi Secdb
-        run: ./scripts/update.sh wolfi "Wolfi Security Data"
-
-      - if: always()
-        name: Chainguard Secdb
-        run: ./scripts/update.sh chainguard "Chainguard Security Data"
-
-      - if: always()
-        name: openEuler CVE
-        run: ./scripts/update.sh openeuler "openEuler CVE Data"
-
-      - if: always()
-        name: Echo CVEs
-        run: ./scripts/update.sh echo "Echo CVE Data"
-
-      - if: always()
-        name: MinimOS Secdb
-        run: ./scripts/update.sh minimos "MinimOS Security Data"
-
-      - if: always()
-        name: Seal Security
-        run: ./scripts/update.sh seal "Seal Security Data"
-
-      - if: always()
-        name: EOL dates
-        run: ./scripts/update.sh eoldates "EOL dates"
-
-      - if: always()
-        name: Root CVE Tracker
-        run: ./scripts/update.sh rootio "Root CVE Feed Tracker"
-
-     # - name: Microsoft Teams Notification
-     #   uses: Skitionek/notify-microsoft-teams@e7a2493ac87dad8aa7a62f079f295e54ff511d88
-     #   if: failure()
-     #   with:
-     #     webhook_url: ${{ secrets.TRIVY_MSTEAMS_WEBHOOK }}
-     #     needs: ${{ toJson(needs) }}
-     #     job: ${{ toJson(job) }}
-     #     steps: ${{ toJson(steps) }}
+      # Uncomment and configure this section for Microsoft Teams notifications on failure
+      # - name: Microsoft Teams Notification
+      #   if: failure()
+      #   uses: Skitionek/notify-microsoft-teams@e7a2493ac87dad8aa7a62f079f295e54ff511d88
+      #   with:
+      #     webhook_url: ${{ secrets.TRIVY_MSTEAMS_WEBHOOK }}
+      #     needs: ${{ toJson(needs) }}
+      #     job: ${{ toJson(job) }}
+      #     steps: ${{ toJson(steps) }}
